# sentinelone-macos-log-analyzer

./: .gitattributes  .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements.txt
docs/: architecture.md  report-guide.md  rules.md
macloganalyzer/: __main__.py  config.py  pipeline.py  update.py
macloganalyzer/analyze/: alerts.py
macloganalyzer/correlate/: group_index.py  process_index.py  timeline.py
macloganalyzer/ingest/: crash_parser.py  extended_text_parser.py  install_log_parser.py  jsonl_parser.py  plist_parser.py  text_parser.py  ui_log_parser.py
macloganalyzer/models/: context.py  event.py  finding.py
macloganalyzer/report/: console.py  html_report.py  json_report.py  markdown.py
macloganalyzer/rules/: base.py  registry.py
macloganalyzer/rules/chain/: crash_correlation.py  kill_chain.py
macloganalyzer/rules/conf/: agent_degraded.py  agent_log_error.py  agent_state.py  agent_version.py  boot_args.py  dual_av.py  kernel_extensions.py  manual_install.py  sip_disabled.py
macloganalyzer/rules/cred/: keychain_access.py  lib_validation.py  private_keys.py
macloganalyzer/rules/evade/: hidden_macho.py  log_tampering.py  steganography.py  timestamp_mod.py
macloganalyzer/rules/exfil/: archive_creation.py  data_collection.py  ingress_tool.py
macloganalyzer/rules/persist/: crontab.py  login_hook.py  plist_modification.py  undiscovered_daemon.py
macloganalyzer/rules/priv/: permissions_mod.py  sudo_usage.py
macloganalyzer/rules/recon/: account_enum.py  etc_hosts.py  recon_chain.py  service_discovery.py  sip_query.py
